--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <h3>Learning Activities</h3>
             <ul>
                 <!-- List items and anchors for learning activities will be populated throughout the course -->
-                <li><a href="/lesson01/holygrail.html">Holy Layout</a></li>
+                <li><a href="lesson01/holygrail.html">Holy Layout</a></li>
                 <li><a href="#">Media Query | Design Principles Document</a></li>
                 <li><a href="#">Activity 1</a></li>
                 <li><a href="#">Activity 2</a></li>
