--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="author" content="Orlando Ancelmo Pinelo">
     <meta name="description" content="Course Assignment portal for Orlando Ancelmo Pinelo in WDD 230: Web Fronted Development at Brigham Young University - Idaho">
     <title>Orlando Ancelmo Pinelo - WDD 230 - Web Frontend Development</title>
+    <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
