--- a/lesson01/holygrail.html
+++ b/lesson01/holygrail.html
@@ -11,7 +11,20 @@
   <header>
     <h1 contenteditable>Header.com</h1>
   </header>
-     <nav contenteditable>Main Navigation</nav>
+     <nav contenteditable><ul>
+      <!-- List items and anchors for learning activities will be populated throughout the course -->
+      <li><a href="#">Activity 1</a></li>
+      <li><a href="#">Activity 2</a></li>
+      <li><a href="#">Activity 1</a></li>
+      <li><a href="#">Activity 2</a></li>
+      <li><a href="#">Activity 1</a></li>
+      <li><a href="#">Activity 2</a></li>
+      <li><a href="#">Activity 1</a></li>
+      <li><a href="#">Activity 2</a></li>
+      <li><a href="#">Activity 1</a></li>
+      <li><a href="#">Activity 2</a></li>
+      <!-- Add more activities as needed -->
+  </ul></nav>
      <!--- <div class="left-sidebar" contenteditable>Left Sidebar</div>-->
       <main contenteditable>Main Content Area</main>
       <div class="right-sidebar" contenteditable>Right Sidebar</div>
