--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
             <ul>
                 <!-- List items and anchors for learning activities will be populated throughout the course -->
                 <li><a href="lesson01/holygrail.html">Holy Layout</a></li>
-                <li><a href="lesson02/design.html"> Design Principles Document|<a href="lesson01/media-query.html">Media Query</a></a></li>
-                <li><a href="#">Activity 1</a></li>
+                <li><a href="lesson02/design.html">Design Principles</a> | <a href="lesson01/media-query.html">Media Query</a>|<a href="lesson02/design-principles.html">Design Principle Document</a></li>
+                <li><a href="#">Activity 3</a></li>
                 <li><a href="#">Activity 2</a></li>
                 <li><a href="#">Activity 1</a></li>
                 <li><a href="#">Activity 2</a></li>
