--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <nav class="navigation" >
             <a href="#" class="active">Home</a>
             <a href="lesson03/chamber-site-plan.html">Site Plan</a> 
-            <a href="chamber/">Chamber</a>
+            <a href="lesson03d">Chamber</a>
             <a href="https://www.byui.edu/" target="_blank">BYU-Idaho</a>
             <a href="https://www.churchofjesuschrist.org/study/scriptures" target="_blank">  Scripture</a>
     </nav>
@@ -53,7 +53,7 @@
                 <!-- List items and anchors for learning activities will be populated throughout the course -->
                 <li><a href="lesson01/holygrail.html">Holy Layout</a></li>
                 <li><a href="lesson02/design.html">Design Principles</a> | <a href="lesson01/media-query.html">Media Query</a>|<a href="lesson02/design-principles.html">Design Principle Document</a></li>
-                <li><a href="https://codepen.io/blazzard-jason/pen/RwYLvJY">Responsive Hamburger</a>|<a href="lesson03/images/CombinatorExcercise.PNG">Combinators</a></li>
+                <li><a href="https://codepen.io/blazzard-jason/pen/RwYLvJY">Responsive Hamburger</a>|<a href="lesson03/images/CombinatorExcercise.PNG">Combinators</a>|<a href="lesson03/chamber-site-plan.html">Chambers of Commerce Site Plan</a></li>
                 <li><a href="#">Activity 1</a></li>
                 <li><a href="#">Activity 2</a></li>
                 <li><a href="#">Activity 1</a></li>
