--- a/chamber/index3.html
+++ b/chamber/index3.html
@@ -24,24 +24,27 @@
 
 </head>
 <body>
-
-    <header>
-        <!-- Header content goes here -->
-        <img src="images/profile-image.jpeg" alt="Orlando Ancelmo Pinelo">
-        <h1>Orlando Ancelmo Pinelo</h1>
-        
-    </header>
-    <!--Hamburger Button-->
-    <button id="menu"></button>                                 
-     <!-- Navigation menu goes here -->
+     <!-- Header content goes here ---------------------------------------------------------------------------------->
+     <header>
+        <div class="logo">
+            <img src="images/logo.png" alt="Orlando Ancelmo Pinelo">    
+            <div>
+                <h1>Quetzaltenango</h1>
+                <p>Chamber of Commerce</p>
+            </div>
+        </div>
+    <!-- Navigation menu goes here -->
     <nav class="navigation" >
             <a href="#" class="active">Home</a>
-            <a href="lesson03/chamber-site-plan.html">Site Plan</a> 
-            <a href="chamber/">Chamber</a>
-            <a href="https://www.byui.edu/" target="_blank">BYU-Idaho</a>
-            <a href="https://www.churchofjesuschrist.org/study/scriptures" target="_blank">  Scripture</a>
+            <a href="lesson03/chamber-site-plan.html">Discover</a> 
+            <a href="lesson03d">Directory</a>
+            <a href="https://www.byui.edu/" target="_blank">Join us</a>
+            
     </nav>
-
+    <!--Hamburger Button-->
+    <button id="menu"></button>   
+    </header>
+    <!----------------------------------------------------------------------------------------------------------------->
     <main>
         <!-- Main content goes here -->
         <h2>WDD 230: Web Frontend Development</h2>
@@ -50,7 +53,7 @@
         <section class="card">
             <h3>Activity and Assignment Links</h3>
             <ul>
-                <!-- List items and anchors for learning activities will be populated throughout the course -->
+                <!-- List items and anchors for learning a<c>tivities will be populated throughout the course -->
                 <li><a href="lesson01/holygrail.html">Holy Layout</a></li>
                 <li><a href="lesson02/design.html">Design Principles</a> | <a href="lesson01/media-query.html">Media Query</a>|<a href="lesson02/design-principles.html">Design Principle Document</a></li>
                 <li><a href="https://codepen.io/blazzard-jason/pen/RwYLvJY">Responsive Hamburger</a>|<a href="lesson03/images/CombinatorExcercise.PNG">Combinators</a>|<a href="lesson03/chamber-site-plan.html">Chambers of Commerce Site Plan</a></li>
