--- a/chamber/index.html
+++ b/chamber/index.html
@@ -42,6 +42,20 @@
            </div>
         </div>
       <div class="bottom_bar">
+
+        <div class="weather-container">
+            
+            <div class=" weather-details">
+                <h3><i class="fa fa-sun-o"></i>98.32°</h3>
+                <h2>Today's</h2>
+            </div>
+            <div class=" weather-details">
+                <h3><i class="fa fa-cloud"></i>60.3°<h3>
+                <h2>Tommorow's</h2>
+            </div>
+         </div>   
+             
+
         <div class="logo"> 
             <img src="images/logo.png" alt="Chamber Logo">
            <!-- <label class="logotext">Chamber of Commerce</label>-->
