--- a/chamber/index.html
+++ b/chamber/index.html
@@ -45,11 +45,11 @@
 
         <div class="weather-container">
             
-            <div class=" weather-details">
+            <div class=" weather-details-today">
                 <h3><i class="fa fa-sun-o"></i>98.32°</h3>
                 <h2>Today's</h2>
             </div>
-            <div class=" weather-details">
+            <div class=" weather-details-tommorow">
                 <h3><i class="fa fa-cloud"></i>60.3°<h3>
                 <h2>Tommorow's</h2>
             </div>
