srcset imaging appplication

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <meta property="og:image" content="https://www.shutterstock.com/es/image-photo/walking-through-quetzaltenango-guatemala-xela-1869936772">
     <meta property="og:url" content="https://byuio-oap.github.io/wdd230/">
     <!--CSS stylesheets-->
-    <link rel="stylesheet" href="styles/normalize.css" defer>
-    <link rel="stylesheet" href="styles/base.css" defer>
-    <link rel="stylesheet" href="styles/larger.css" defer>
+    <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="styles/larger.css">
 
 
 </head>
@@ -63,7 +63,7 @@
                 <img src="images/xela-large.webp" alt="Quetzaltenango's Temple" width="1500" height="750">
                 </picture>
                 <div class="herolabel">
-                    <p>Quetzaltenango Temple</p>
+                    <h2>Quetzaltenango Temple</h2>
                 </div>
             </div>
         </section>
