text color for Develping to whit

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -104,8 +104,8 @@
     
             </picture>
             <div class="herolabel">
-                <h1>Developing Business.</h1>
-                <h2 >"Working with the brave who transform Quetzaltenango."</h2>
+                <h1><span class="wordcolor">Developing</span> Business.</h1>
+                <h2 ><span class="wordcolor">"Working with the</span> brave who transform Quetzaltenango."</h2>
                 <!--<p>To promote national prosperity and economic growth via a free enterprise system..</p>-->
                 <a href="#">Become a Member <i class="fa fa-angle-right fa-lg "></i></a>
     
