--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -70,7 +70,7 @@
 
         <div class="logo"> 
           <picture>
-            <source srcset="images/small_logo.webp" media="(max-width: 500px )">
+            <source srcset="images/small_logo_150x67.webp" media="(max-width: 500px )">
             <source srcset="images/medium_logo_250x112.webp" media="(max-width: 1000px )">
             <img src="images/large_logo_300x134.webp" alt="Logo Xela Chamber" width="300" height="134">
 
@@ -332,7 +332,7 @@
                         <form>
                             <i class="fa fa-envelope"></i>
                             <input type="email" placeholder="Enter your email id" required>
-                            <button type="submit"><i class="fa fa-arrow-right"></i></button>
+                            <button type="submit" aria-label="Send Email"><i class="fa fa-arrow-right"></i></button>
                         </form>
                         <div class="social-icons">
                          <i class="fa fa-facebook"></i>
