--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <li><a href="lesson05/bom.html">Book of Mormon 10 Top </a>|<a href="https://codepen.io/byuio-oap/pen/mdoYNYj">Image Aspect Ratio</a></li>
                 <li><a href="lesson06/images/landscape.webp">WebP</a>|<a href="lesson06/responsive-images.html">Responsive Temple Image</a></li>
                 <li><a href="lesson07/lazyload.html">Lazy Image Loading</a>|<a href="lesson07/bom.html">Book of Mormon Web Storage</a></li>
-                <li><a href="lesson08/tablebuild.html">HTML Table</a>|<a href="lesson08/Form-start/index.html">From Design</a></li>
+                <li><a href="lesson08/tablebuild.html">HTML Table</a>|<a href="lesson08/Form-start/index.html">From Design</a>|<a href="chamber/form.html">Form</a></li>
                 <li><a href="#">Activity 2</a></li>
                 <li><a href="#">Activity 2</a></li>
 
