--- a/chamber/form.html
+++ b/chamber/form.html
@@ -87,7 +87,7 @@
             </label>
            
             <ul>
-                <li><i class="fa fa-home fa-lg"></i><a href="">Home</a></li>
+                <li><i class="fa fa-home fa-lg"></i><a href="./index.html">Home</a></li>
                 <li><i class="fa fa-binoculars " aria-hidden="true"></i><a href="./discover.html" >Discover</a></li>
                 <li><i class="fa fa-folder "></i><a href="">Directory</a></li>
                 <li><i class="fa fa-users"></i><a href="">Join us</a></li>
