--- a/chamber/form.html
+++ b/chamber/form.html
@@ -179,7 +179,7 @@
             
             <div class="col">
                 <h3>Newsletter<!--<div class="underline"><span></span></div>--></h3>
-                <form class="indexform">
+                <form class="indexform-footer">
                     <i class="fa fa-envelope"></i>
                     <input type="email" placeholder="Enter your email id" required>
                     <button type="submit" aria-label="Send Email"><i class="fa fa-arrow-right"></i></button>
