--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -88,8 +88,8 @@
                 <li><i class="fa fa-home fa-lg"></i><a href="./index.html">Home</a></li>
                 <li><i class="fa fa-binoculars " aria-hidden="true"></i><a class="active" href="./discover.html" >Discover</a></li>
                 <li><i class="fa fa-folder "></i><a href="">Directory</a></li>
-                <li><i class="fa fa-users"></i><a href="">Join us</a></li>
-                <li><i class="fa fa-sign-in fa-lg"></i><a href="./form.html">Sign Up</a></li>
+                <li><i class="fa fa-users"></i><a href="./join.html">Join us</a></li>
+                
             </ul>
         </nav>
       </div>
