--- a/chamber/join.html
+++ b/chamber/join.html
@@ -27,7 +27,7 @@
  
     
     <header>
-<!--Top Bar Address , Email ,Phone,Login----------------------------->        
+<!--Top Bar Address , Email ,Phone,Login-->        
         <div class="top_bar">
            <div class="container">
              <div class="top-bar_info_wr">
@@ -43,7 +43,7 @@
            </div>
         </div>
       <div class="bottom_bar">
-<!--Weather------------------------------------------------------------->
+<!--Weather-->
         <div class="weather-container">
                 <div class="temp">
                   <span>Temperature:</span>
@@ -66,7 +66,7 @@
          
 
 
-<!----Logo Xeal Chamber of Commerce-------------------------------------->             
+<!--Logo Xeal Chamber of Commerce-->             
 
         <div class="logo"> 
             <picture>
