--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <li><a href="lesson06/images/landscape.webp">WebP</a>|<a href="lesson06/responsive-images.html">Responsive Temple Image</a></li>
                 <li><a href="lesson07/lazyload.html">Lazy Image Loading</a>|<a href="lesson07/bom.html">Book of Mormon Web Storage</a></li>
                 <li><a href="lesson08/tablebuild.html">HTML Table</a>|<a href="lesson08/Form-start/index.html">From Design</a>|<a href="chamber/form.html">Form</a></li>
-                <li><a href="#">Activity 2</a></li>
+                <li><a href="lesson09/new-ward-member.json">Json File for the Doe Family</a>|<a href="https://codepen.io/byuio-oap/pen/WNWvXRL">Auto Fit Reference</a>|<a href="/lesson09/prophets.html">Prophets Activity</a></li>
                 <li><a href="#">Activity 2</a></li>
 
             </ul>
