menu and prophets json

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -87,7 +87,7 @@
             <ul>
                 <li><i class="fa fa-home fa-lg"></i><a class="active" href="">Home</a></li>
                 <li><i class="fa fa-binoculars " aria-hidden="true"></i><a href="./discover.html" >Discover</a></li>
-                <li><i class="fa fa-folder "></i><a href="">Directory</a></li>
+                <li><i class="fa fa-folder "></i><a href="./directory.html">Directory</a></li>
                 <li><i class="fa fa-users"></i><a href="./join.html">Join us</a></li>
                 <!--<li><i class="fa fa-sign-in fa-lg"></i><a href="./form.html">Sign Up</a></li>-->
             </ul>
