--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Orlando Ancelmo Pinelo - WDD 230 - Web Frontend Development</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@100&display=swap" rel="stylesheet" defer>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@100&display=swap" rel="stylesheet">
     <!--Favicon Logo-->
     <link rel="icon" href="images/favicon.ico">
     <!-- Facebook Meta Tags-->
@@ -79,20 +79,7 @@
         <!-- Learning Activities Section -->
         <section class="card">
             <h3>Activity and Assignment Links</h3>
-            <ul>
-                <!-- List items and anchors for learning activities will be populated throughout the course -->
-                <li><a href="lesson01/holygrail.html">Holy Layout</a></li>
-                <li><a href="lesson02/design.html">Design Principles</a> | <a href="lesson01/media-query.html">Media Query</a>|<a href="lesson02/design-principles.html">Design Principle Document</a></li>
-                <li><a href="https://codepen.io/blazzard-jason/pen/RwYLvJY">Responsive Hamburger</a>|<a href="lesson03/images/CombinatorExcercise.PNG">Combinators</a></li>
-                <li><a href="lesson03/chamber-site-plan.html">Chambers of Commerce Site Plan</a>|<a href="chamber/index.html">Buidling Chamber of Commerce Home Page</a></li>
-                <li><a href="lesson05/bom.html">Book of Mormon 10 Top </a>|<a href="https://codepen.io/byuio-oap/pen/mdoYNYj">Image Aspect Ratio</a></li>
-                <li><a href="lesson06/images/landscape.webp">WebP</a>|<a href="lesson06/responsive-images.html">Responsive Temple Image</a></li>
-                <li><a href="lesson07/lazyload.html">Lazy Image Loading</a>|<a href="lesson07/bom.html">Book of Mormon Web Storage</a></li>
-                <li><a href="lesson08/tablebuild.html">HTML Table</a>|<a href="lesson08/Form-start/index.html">From Design</a>|<a href="chamber/form.html">Form</a></li>
-                <li><a href="lesson09/new-ward-member.json">Json File for the Doe Family</a>|<a href="https://codepen.io/byuio-oap/pen/WNWvXRL">Auto Fit Reference</a>|<a href="/lesson09/prophets.html">Prophets Activity</a></li>
-                <li><a href="#">Activity 2</a></li>
-
-            </ul>
+            <div id="ulcards"></div>
         </section>
 
         <!-- Information Section -->
@@ -135,6 +122,7 @@
     
     <script src="scripts/getdates.js"></script>
     <script src="scripts/responsive.js"></script>
+    <script src="scripts/link.js"></script>
 
 </body>
 </html>
