--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -87,7 +87,7 @@
             <ul>
                 <li><i class="fa fa-home fa-lg"></i><a href="./index.html">Home</a></li>
                 <li><i class="fa fa-binoculars " aria-hidden="true"></i><a class="active" href="./discover.html" >Discover</a></li>
-                <li><i class="fa fa-folder "></i><a href="">Directory</a></li>
+                <li><i class="fa fa-folder "></i><a href="./directory.html">Directory</a></li>
                 <li><i class="fa fa-users"></i><a href="./join.html">Join us</a></li>
                 
             </ul>
