--- a/chamber/join.html
+++ b/chamber/join.html
@@ -56,7 +56,7 @@
 <div class="logo"> 
 
     <div class="tday_weather">
-        <img id="weather-icon" src="" alt="">
+        <img id="weather-icon" src="#" alt="Weather Icon">
         <span id="desc"></span>
         <span id="temp">...</span>
 
