hover, footer,menu details

--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -99,7 +99,7 @@
                <i class="fa fa-bars"></i>
             </label>
            
-            <ul>
+            <ul class="menuopciones">
                 <li><i class="fa fa-home fa-lg"></i><a class="active" href="">Home</a></li>
                 <li><i class="fa fa-binoculars " aria-hidden="true"></i><a href="./discover.html" >Discover</a></li>
                 <li><i class="fa fa-folder "></i><a href="">Directory</a></li>
@@ -162,11 +162,11 @@
 
             <div class="col">
                 <h3>Links<!--<div class="underline"><span></span></div>--></h3>
-                <ul>
-                    <li><a href="">Home</a></li>
-                    <li><a href="">Discover</a></li>
-                    <li><a href="">Directory</a></li>
-                    <li><a href="">Join Us</a></li>
+                <ul class="ulfooter">
+                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="./discover.html">Discover</a></li>
+                    <li><a href="./directory.html">Directory</a></li>
+                    <li><a href="./join.html">Join Us</a></li>
                     
                 </ul>
             </div>
