--- a/chamber/form.html
+++ b/chamber/form.html
@@ -9,7 +9,7 @@
     <title>Chamber of Commerce, Xela</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
     <!--Favicon Logo-->
     <link rel="icon" href="images/favicon.ico">
     <!-- Facebook Meta Tags-->
@@ -86,7 +86,7 @@
                <i class="fa fa-bars"></i>
             </label>
            
-            <ul>
+            <ul class="menuopciones">
                 <li><i class="fa fa-home fa-lg"></i><a href="./index.html">Home</a></li>
                 <li><i class="fa fa-binoculars " aria-hidden="true"></i><a href="./discover.html" >Discover</a></li>
                 <li><i class="fa fa-folder "></i><a href="">Directory</a></li>
@@ -168,11 +168,11 @@
 
             <div class="col">
                 <h3>Links<!--<div class="underline"><span></span></div>--></h3>
-                <ul>
-                    <li><a href="">Home</a></li>
-                    <li><a href="">Discover</a></li>
-                    <li><a href="">Directory</a></li>
-                    <li><a href="">Join Us</a></li>
+                <ul class="ulfooter">
+                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="./discover.html">Discover</a></li>
+                    <li><a href="./directory.html">Directory</a></li>
+                    <li><a href="./join.html">Join Us</a></li>
                     
                 </ul>
             </div>
