--- a/chamber/index.html
+++ b/chamber/index.html
@@ -7,9 +7,10 @@
     <meta name="author" content="Orlando Ancelmo Pinelo" >
     <meta name="description" content="Chamber of Commerce Website for the Municipality of Quetzaltenango-Xela">
     <title>Chamber of Commerce, Xela</title>
+    <!--Font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
     <!--Favicon Logo-->
     <link rel="icon" href="images/favicon.ico">
     <!-- Facebook Meta Tags-->
@@ -78,7 +79,7 @@
                <i class="fa fa-bars"></i>
             </label>
            
-            <ul>
+            <ul class="menuopciones">
                 <li><i class="fa fa-home fa-lg"></i><a class="active" href="">Home</a></li>
                 <li><i class="fa fa-binoculars " aria-hidden="true"></i><a href="./discover.html" >Discover</a></li>
                 <li><i class="fa fa-folder "></i><a href="./directory.html">Directory</a></li>
@@ -349,8 +350,8 @@
 
             <div class="col">
                 <h4>Links<!--<div class="underline"><span></span></div>--></h4>
-                <ul>
-                    <li><a href="./index.html">Home</a></li>
+                <ul class="ulfooter">
+                    <li><a href="./index.html" class="active">Home</a></li>
                     <li><a href="./discover.html">Discover</a></li>
                     <li><a href="./directory.html">Directory</a></li>
                     <li><a href="./join.html">Join Us</a></li>
