bold, grid and list icons

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -357,7 +357,7 @@
             <script src="scripts/getdates.js"></script>
            <!-- <script src="scripts/windchill.js"></script>-->
            <script src="scripts/toggle.js"></script>
-            <script src="scripts/lazyloading.js"></script>
+            <script src="scripts/lazyloading.js" async></script>
             <script src="scripts/checker.js"></script>
             <script src="scripts/weather.js"></script>
 
